--- a/tipettino/package.json
+++ b/tipettino/package.json
@@ -15,6 +15,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b build -d build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
@@ -45,5 +47,5 @@
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   },
-  "homepage": "https://tipettino.altervista.org/preview"
+  "homepage": "https://https://mrtip0.github.io/site/"
 }
