--- a/tipettino/package.json
+++ b/tipettino/package.json
@@ -15,8 +15,9 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b build -d build",
+    "predeploy": "npm run clear && npm run build",
+    "clear": "gh-pages-clean",
+    "deploy": "gh-pages -b site -d build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
@@ -47,5 +48,5 @@
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   },
-  "homepage": "https://https://mrtip0.github.io/site/"
+  "homepage": "https://mrtip0.github.io/site/"
 }
