--- a/tipettino/package.json
+++ b/tipettino/package.json
@@ -52,5 +52,5 @@
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   },
-  "homepage": "https://tipettino.altervista.org/preview/"
+  "homepage": "https://tipettino.altervista.org/"
 }
