--- a/tipettino/package.json
+++ b/tipettino/package.json
@@ -1,56 +1,58 @@
 {
-  "name": "tipettino",
-  "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@headlessui/react": "^1.3.0",
-    "@heroicons/react": "^1.0.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "gh-pages": "^3.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "predeploy": "npm run clear && npm run build",
-    "clear": "gh-pages-clean",
-    "deploy": "gh-pages -b site -d build",
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.14",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/tailwindcss": "^2.2.1",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
-  },
-  "homepage": "https://tipettino.altervista.org/"
+	"name": "tipettino",
+	"version": "1.0.0",
+	"private": true,
+	"dependencies": {
+		"@craco/craco": "^6.2.0",
+		"@headlessui/react": "^1.3.0",
+		"@heroicons/react": "^1.0.2",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"gh-pages": "^3.2.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
+		"typescript": "^4.3.5",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"predeploy": "npm run clear && npm run build",
+		"clear": "gh-pages-clean",
+		"deploy": "gh-pages -b site -d build",
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@prettier/plugin-php": "^0.17.3",
+		"@types/react": "^17.0.14",
+		"@types/react-router-dom": "^5.1.8",
+		"@types/tailwindcss": "^2.2.1",
+		"autoprefixer": "^9.8.6",
+		"postcss": "^7.0.36",
+		"prettier": "^2.3.2",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
+	},
+	"homepage": "https://tipettino.altervista.org/"
 }
