--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#99F6E4",
   "background_color": "#ffffff"
 }
